# RenderBaby

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
ci/: README.md  add-git-hooks.sh  remove-remote-branches.sh
ci/archive/20251212-232936/: 156-remove-downcasts.tar  157-move-geometries-to-crate.tar  158-2-doc-comments.tar  158-doc-comments-2.tar  159-logging.tar  160-tests-2.tar  160-tests.tar  168-Implement-own-.obj-Parser.tar  170-geometry.tar  176-implement-moveable-camera.tar  178-implement-diffuse-lighting.tar  196-add-jsonable-structs-and-their-parser.tar  197-add-scene-json-fixtures.tar  220-access-set-camera-settings-sample-count-progress-trough-data-plane.tar  222-changekeep-removes-objects.tar  233-importing-a-second-obj-is-bugged.tar  237-replace-tri_geometry-with-mesh.tar  241-fix-sprint-03-compile-errors-after-merging.tar  243-implement-missing-control-features-for-sprint03-demo.tar  245-upload-example-scene-fixture-2.tar  245-upload-example-scene-fixture.tar  256-create-scene-proxy.tar  279-remove-leftover-scratesscenelib.tar  LOCAL-frame-buffer.tar  TEMP-scene-container.tar  integrate-no-color-hash-tmp.tar  json-text-field.tar  merge-03.tar  resolve-sprint-03-merge-into-master.tar  save-image-gui.tar  sprint-01.tar  sprint-02.tar  sprint-03-end-merge-conflicts.tar  sprint-03.tar  task-add-cli.tar  task-add-command-stack-crate.tar  task-add-logging-err-handling.tar  task-broaden-git-hooks.tar  task-file-export.tar  task-fix-git-hooks-deleted-files.tar  (+3 more)
ci/git-hooks/: pre-commit.sh  pre-push.sh
crates/command-stack/: Cargo.toml
crates/command-stack/src/: builder.rs  lib.rs
crates/computational-plane/: Cargo.toml
crates/control-plane/: Cargo.toml
crates/control-plane/src/: controller.rs  egui_view.rs  general_controller.rs  general_model.rs  lib.rs  model.rs  mvc.rs  pipeline.rs  view.rs
crates/control-plane/src/controller/: egui_controller.rs  mod.rs
crates/control-plane/src/model/: egui_model.rs  mod.rs
crates/control-plane/src/view/: egui_view.rs  mod.rs
crates/data-plane/: Cargo.toml
crates/data-plane/src/: action_stack.rs  lib.rs  obj_parser.rs  scene.rs  scene_action.rs  scene_geometry.rs  scene_graph.rs
crates/eframe-elements/: Cargo.toml
crates/eframe-elements/src/: effects.rs  file_picker.rs  image_area.rs  lib.rs  message_popup.rs
crates/engine-bvh/: Cargo.toml
crates/engine-bvh/src/: aabb.rs  bvh.rs  lib.rs  triangle.rs
crates/engine-config/: Cargo.toml
crates/engine-config/src/: camera.rs  lib.rs  material.rs  mesh.rs  point_lights.rs  render_config.rs  render_engine.rs  renderer.rs  sphere.rs  texture.rs  triangle.rs  uniforms.rs  vec3.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: lib.rs
crates/engine-main/: Cargo.toml
crates/engine-main/src/: lib.rs
crates/engine-pathtracer/: Cargo.toml  README.md
crates/engine-pathtracer/src/: lib.rs
crates/engine-raytracer/: Cargo.toml
crates/engine-raytracer/src/: lib.rs  shader.wgsl  shader_docs.md
crates/engine-shader/: Cargo.toml
crates/engine-shader/src/: lib.rs
crates/engine-wgpu-wrapper/: Cargo.toml  README.md
crates/engine-wgpu-wrapper/src/: bind_group.rs  buffers.rs  gpu_device.rs  gpu_wrapper.rs  lib.rs  pipeline.rs  render_output.rs  renderer.rs
crates/frame-buffer/: Cargo.toml
crates/frame-buffer/src/: deferred_iterator.rs  frame_buffer.rs  frame_iterator.rs  frame_provider.rs  lib.rs
crates/log-buffer/: Cargo.toml
crates/log-buffer/src/: lib.rs
crates/mvc/: Cargo.toml
crates/mvc-view-wrappers/: Cargo.toml
crates/mvc-view-wrappers/src/: egui_view.rs
crates/mvc/src/: egui_view.rs  lib.rs  traits.rs  view.rs
crates/scene/: Cargo.toml
crates/scene-engine-adapter/: Cargo.toml
crates/scene-engine-adapter/src/: lib.rs
crates/scene-initializer/: Cargo.toml
crates/scene-initializer/src/: lib.rs  run.rs
crates/scene-obj-parser/: Cargo.toml
crates/scene-obj-parser/src/: lib.rs
crates/scene-objects/: Cargo.toml  README.md
crates/scene-objects/src/: camera.rs  geometric_object.rs  lib.rs  light_source.rs  material.rs  mesh.rs  sphere.rs  tri_geometry.rs
crates/scene-parser/: Cargo.toml
crates/scene-parser/src/: lib.rs  scene_parser.rs
crates/scene/src/: action_stack.rs  geometric_object.rs  lib.rs  obj_parser.rs  render_angine_adapter.rs  scene.rs  scene_engine_adapter.rs  scene_graph.rs  scene_parser.rs
crates/thread-wrapper/: Cargo.toml
crates/thread-wrapper/src/: lib.rs
crates/view-wrappers/: Cargo.toml
crates/view-wrappers/src/: egui_view.rs  lib.rs
fixtures/: benchmark.json
fixtures/capsule/: capsule.mtl
fixtures/scene-interface/: box_scene.json  proto_scene.json
fixtures/scenes/: example_scene.json  sample-cube.rscn  scene.json  scene.rscn
included/fixtures/: pack_scenes.sh
included/fixtures/cornell_box/: cornell-box.mtl
included/fixtures/ferris_high_poly/: ferris3d_v1.0.mtl
included/fixtures/models/: ferris_detailed.mtl
included/fixtures/scenes/: final_cornell_with_lamp_and_spheres.rscn  scene.json
included/templates/scene/: sphere.json  test.json
src/: compute_plane.rs  data_plane.rs  included_dirs.rs  included_files.rs  main.rs
src/compute_plane/: engine.rs  render_engine.rs
src/control_plane/: app.rs  cli.rs  gui.rs  modes.rs
src/control_plane/gui/: app.rs  controller.rs  gui.rs  model.rs  pipeline.rs  view.rs
src/control_plane/modes/: benchmark.rs  cli_static.rs  gui.rs
src/data_plane/: scene.rs  scene_io.rs  scene_proxy.rs
src/data_plane/scene/: _scene.rs  geometric_object.rs  rb_objects.rs  render_parameter.rs  render_scene.rs  scene.rs  scene_change.rs  scene_change_handler.rs  scene_engine_adapter.rs  scene_graph.rs  tests.rs
src/data_plane/scene_io/: file_manager.rs  img_export.rs  mtl_parser.rs  obj_parser.rs  scene_exporter.rs  scene_importer.rs  scene_io_objects.rs  scene_parser.rs  scene_schema.json  tests.rs  tests_additional_export.rs  texture_loader.rs
src/data_plane/scene_proxy/: color.rs  misc.rs  position.rs  (+7 more)
src/mvc/: controller.rs  mod.rs  model.rs  view.rs
templates/scene/: spheres.json
(+8 files in other folders)
