[package]
name = "renderbaby"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
anyhow = "1.0.100"
egui-file-dialog = "0.12.0"
serde = "1.0.228"
glam = "0.30.9"
tobj = "4.0.3"
engine-config = { version = "0.1.0", path = "crates/engine-config" }
engine-wgpu-wrapper = { version = "0.1.0", path = "crates/engine-wgpu-wrapper" }
engine-pathtracer = { version = "0.1.0", path = "crates/engine-pathtracer" }
engine-raytracer = { version = "0.1.0", path = "crates/engine-raytracer" }
view-wrappers = { path = "crates/view-wrappers" }
scene-objects = { path = "crates/scene-objects"}
log-buffer = {path = "crates/log-buffer"}

[workspace]
members = [
    ".",
    "crates/engine-pathtracer",
    "crates/engine-raytracer",
    "crates/engine-wgpu-wrapper",
    "crates/engine-config",
    "crates/view-wrappers",
    "crates/scene-objects",
    "crates/command-stack",
    "crates/log-buffer",
]
