[package]
name = "renderbaby"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
log = "0.4.28"
anyhow = "1.0.100"
rfd = "0.16.0"
serde = "1.0.228"
serde_json = "1.0.145"
glam = "0.30.9"
tobj = "4.0.3"
engine-config = { version = "0.1.0", path = "crates/engine-config" }
engine-wgpu-wrapper = { version = "0.1.0", path = "crates/engine-wgpu-wrapper" }
engine-pathtracer = { version = "0.1.0", path = "crates/engine-pathtracer" }
engine-raytracer = { version = "0.1.0", path = "crates/engine-raytracer" }
view-wrappers = { path = "crates/view-wrappers" }
log-buffer = { path = "crates/log-buffer" }
clap = { version = "4.4.7", features = ["derive"] }
scene-objects = { path = "crates/scene-objects"}
image = "0.25.9"
thiserror = "2.0.17"
eframe-elements = { path = "crates/eframe-elements" }


[workspace]
members = [
    ".",
    "crates/engine-pathtracer",
    "crates/engine-raytracer",
    "crates/engine-wgpu-wrapper",
    "crates/engine-config",
    "crates/view-wrappers",
    "crates/command-stack",
    "crates/log-buffer",
    "crates/scene-objects",
    "crates/eframe-elements",
]
