[package]
name = "renderbaby"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.0"
log = "0.4.28"
anyhow = "1.0.100"
rfd = "0.17.0"
serde = "1.0.228"
serde_json = "1.0.145"
glam = "0.30.9"
engine-config = { version = "0.1.0", path = "crates/engine-config" }
engine-pathtracer = { version = "0.1.0", path = "crates/engine-pathtracer" }
engine-raytracer = { version = "0.1.0", path = "crates/engine-raytracer" }
engine-bvh = { path = "crates/engine-bvh" }
view-wrappers = { path = "crates/view-wrappers" }
engine-wgpu-wrapper = { version = "0.1.0", path = "crates/engine-wgpu-wrapper" }
log-buffer = { path = "crates/log-buffer" }
clap = { version = "4.4.7", features = ["derive"] }
scene-objects = { path = "crates/scene-objects" }
image = "0.25.9"
eframe-elements = { path = "crates/eframe-elements" }
include_dir = "0.7.4"
jsonschema = "0.39.0"
frame-buffer = { path = "crates/frame-buffer" }
zip = "7.0.0"
chrono = "0.4.42"
sysinfo = "0.37.2"
wgpu = "28.0.0"
pollster = "0.4.0"

[workspace]
members = [
    ".",
    "crates/engine-pathtracer",
    "crates/engine-raytracer",
    "crates/engine-wgpu-wrapper",
    "crates/engine-config",
    "crates/view-wrappers",
    "crates/log-buffer",
    "crates/scene-objects",
    "crates/eframe-elements",
    "crates/engine-bvh",
    "crates/frame-buffer",
]
