[package]
name = "control-plane"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui-file-dialog = "0.12.0"
engine-config = { path = "../engine-config" }
engine-main = { path = "../engine-main" }
engine-wgpu-wrapper = { path = "../engine-wgpu-wrapper" }
scene = { path = "../scene" }
