[package]
name = "engine-pathtracer"
version = "0.1.0"
edition = "2024"
description = "Provides a wgpu-based path tracing implementation, extending the engine-wgpu-wrapper crate"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
engine-config = { path = "../engine-config" }
engine-wgpu-wrapper = { path = "../engine-wgpu-wrapper"}
frame-buffer = { path = "../frame-buffer" }