[package]
name = "engine-wgpu-wrapper"
version = "0.1.0"
edition = "2024"
description = "Provides a reusable wgpu setup base and delegates the rest to engine-raytracer/pathtracer."
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
wgpu = "27.0.1"
engine-config = { path = "../engine-config" }
frame-buffer = { path = "../frame-buffer" }
bytemuck = "1.24.0"
pollster = "0.4.0"
log = "0.4.28"
