[package]
name = "scene"
version = "0.1.0"
edition = "2024"

[dependencies]
#computational-plane = {path = "../computational-plane"}
engine-wgpu-wrapper = { path = "../engine-wgpu-wrapper"}
engine-config = { path = "../engine-config"}
engine-main = { path = "../engine-main"}
#scene-engine-adapter = {path = "../scene-engine-adapter"}
log = "0.4"
env_logger = "0.11"
glam = { version = "0.30.9", default-features = false, features = ["libm"] }
tobj = "4.0.3"
anyhow = "1.0.100"
serde = "1.0.228"
serde_json = "1.0.145"
